SecondHomework of second Sem is done